# HMatrixCPP

./: .gitignore  CMakeLists.txt
include/: dmatrix.h  matrix.h  svector.h
src/: matrix.cpp
tests/unit_tests/: matrix.cpp  tests_dmatrix.cpp  tests_svector.cpp
